--- a/HAController.vbproj
+++ b/HAController.vbproj
@@ -154,6 +154,7 @@
     <Compile Include="modGlobal.vb" />
     <Compile Include="modGPS.vb" />
     <Compile Include="modInsteon.vb" />
+    <Compile Include="modIpcClient.vb" />
     <Compile Include="modLibrary.vb" />
     <Compile Include="modMail.vb" />
     <Compile Include="modMapQuest.vb" />
